About Me update and cosmetic tweaks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <img src="face.jpg" alt="User icon" class="profile"/>
                             </div>
                             <div class="info"> 
-                                <h1> Daniel Dodoc </h1>
+                                <h1> Mihai Daniel <br> Dodoc </h1>
                                 <h2> Software Engineer</h2>
                             </div>
                         </div>
@@ -36,7 +36,12 @@
                     </div>
 
                     <div class="about">
-                        <p style="height: 180px;margin: 0; padding: 10px"> I love my wife! <p>
+                        <p style="height: 220px;margin: 0; padding: 20px 20px 0px 20px"> 
+                            Hi, I'm Dan! For 5 years, I have been expanding my software development skills via projects in distributed systems, web, graphics and game development.
+                            I have a passion for designing robust and flexible systems, and I love to experiment with anything visual!
+                            <br> <br>
+                            I thrive in collaborative environments that allow me to challenge my ideas. I enjoy learning skills that streamline my workflow and improve my projects, 
+                            and I've found that working in a team is the best way to achieve this.
                         <hr class="bar">
                         <div class="buttonBox">
                             <button type="button" id="exit-about"> Back </button>
