--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="backdrop.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <img src="background.jpg" style="display: none;" />
-        <link rel="preload" href="bg-image-wide.png" as="image">
+        <link rel="preload" href="background.png" as="image">
     </head>
 
     <body>
