--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <script type="text/javascript" src="index.js" defer></script>
         <script type="text/javascript" src="backdrop.js" defer></script>
         <link rel="stylesheet" href="style.css">
-        <link rel="preload" href="bg-image-wide.png" as="image">
+        <link rel="preload" href="background.jpg" as="image">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
 
     <canvas id="myCanvas" width="1000" height="1000"> </canvas>
