--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,8 @@
         <script type="text/javascript" src="backdrop.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <img src="background.jpg" style="display: none;" />
-        <link rel="preload" href="background.png" as="image">
+        <link rel="preload" href="background.jpg" as="image">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
 
     <body>
