--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
 
                     <div class="about">
                         <p style="height: 220px;margin: 0; padding: 20px 20px 0px 20px"> 
-                            Hi, I'm Dan! For 5 years, I have been expanding my software development skills via projects in distributed systems, web, graphics and game development.
-                            I have a passion for designing robust and flexible systems, and I love to experiment with anything visual!
+                            Hi, I'm Dan!
+                            For 5 years, I have been improving on my development skills with projects ranging from DSA implementations and renderers to desktops apps and videogames.
+                            I have a passion for designing, implementing and iterating towards robust and flexible software architectures.
                             <br> <br>
-                            I thrive in collaborative environments that allow me to challenge my ideas. I enjoy learning skills that streamline my workflow and improve my projects, 
-                            and I've found that working in a team is the best way to achieve this.
+                            I thrive in collaborative environments that challenges my ideas and designs. 
+                            I enjoy learning skills that improve my workflow and projects, 
+                            and I've found that working in a team is the best way to do so.
+                            <br> <br>
+                            
                         <hr class="bar">
                         <div class="buttonBox">
                             <button type="button" id="exit-about"> Back </button>
