Updated placeholder projects page

--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,10 @@
     <body>
         <canvas id="myCanvas" width="1000" height="1000"> </canvas>
 
-        <div class="container" id="placeholder-projects">
-            <h1 id="under-construction"> Under construction! </h1>
-            <hr class="bar">
-            <div class="buttonBox">
-                <a href="index.html"> <button type="button"> Back </button></a>
+        <div id="projects-container">
+            <div class="projects-page">
+                <h1> Projects </h1>
+                <p> This page is still under construction. Please see my <a href="https://github.com/InRe-Dan">GitHub page</a> to find out what I've been up to!</p>
             </div>
         </div>
 
