--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             For 5 years, I have been improving on my development skills with projects ranging from DSA implementations and renderers to desktops apps and videogames.
                             I have a passion for designing, implementing and iterating towards robust and flexible software architectures.
                             <br> <br>
-                            I thrive in collaborative environments that challenges my ideas and designs. 
+                            I thrive in collaborative environments that challenge my ideas and designs. 
                             I enjoy learning skills that improve my workflow and projects, 
                             and I've found that working in a team is the best way to do so.
                             <br> <br>
